k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
      - name: worker
        # command:
        # - tail
        # - "-f"
        # - /dev/null
        image: dnw2022/fib-calc-worker
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
